# ChangeLog for app-portage/ufed
# Copyright 2003-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/ufed/ChangeLog,v 1.69 2008/08/08 16:55:54 nixnut Exp $

  08 Aug 2008; nixnut <nixnut@gentoo.org> ufed-0.40-r10.ebuild:
  Stable on ppc wrt bug 233644

  04 Aug 2008; Jeroen Roovers <jer@gentoo.org> ufed-0.40-r10.ebuild:
  Stable for HPPA (bug #233644).

  04 Aug 2008; Santiago M. Mola <coldwind@gentoo.org> ufed-0.40-r10.ebuild:
  amd64 stable wrt bug #233644, thanks to Chad A. Simmons.

  03 Aug 2008; Raúl Porcel <armin76@gentoo.org> ufed-0.40-r10.ebuild:
  alpha/ia64/x86 stable wrt #233644

  02 Aug 2008; Markus Rothe <corsair@gentoo.org> ufed-0.40-r10.ebuild:
  Stable on ppc64; bug #233644

  01 Aug 2008; Ferris McCormick <fmccor@gentoo.org> ufed-0.40-r10.ebuild:
  Sparc stable --- Bug #233644 --- All looks good.

*ufed-0.40-r10 (26 Jun 2008)

  26 Jun 2008; Harald van Dĳk <truedfx@gentoo.org>
  files/ufed-0.40-noremove.patch, -ufed-0.40-r8.ebuild,
  -ufed-0.40-r9.ebuild, +ufed-0.40-r10.ebuild:
  Don't remove -* from make.conf; reported in bug 229601 by Willie Wong

*ufed-0.40-r9 (10 May 2008)

  10 May 2008; Harald van Dĳk <truedfx@gentoo.org>
  +files/ufed-0.40-multiple-inheritance.patch, -ufed-0.40-r7.ebuild,
  +ufed-0.40-r9.ebuild:
  Handle multiple parent profiles, bug #221151

*ufed-0.40-r8 (28 Apr 2008)

  28 Apr 2008; Harald van Dĳk <truedfx@gentoo.org>
  +files/ufed-0.40-termsize.patch, +ufed-0.40-r8.ebuild:
  Bug #219578: Don't try to draw the scroll thumb if the terminal window is
  large enough to not need one. It caused ufed to abort and is pointless
  anyway.

*ufed-0.40-r7 (07 Jan 2008)

  07 Jan 2008; Harald van Dĳk <truedfx@gentoo.org>
  +files/ufed-0.40-noremove.patch, -ufed-0.40-r1.ebuild,
  +ufed-0.40-r7.ebuild:
  Don't remove seemingly unnecessary flags in make.conf, as they may be used
  to override IUSE defaults
  Remove older version
