@@ -9,5 +9,6 @@ AUX ufed-0.40-termsize.patch 1022 RMD160 ecbe487e3ede165eb24a4e098d6a41f41ae805f
 AUX ufed-0.40-useorder.patch 983 RMD160 6886d7dcf15c47aaf5cc45d730511d0d7f2bd8f2 SHA1 6d026beb4d1a93dc7567fe11cd3ef519e7f64113 SHA256 e3f904ab52d9fc184f7d32800f25c3d1ddaf73e14db09585afb12ca64e36fc0b
 DIST ufed-0.40.tar.bz2 20288 RMD160 f360eb01f952acb4f52cfa571927a523f1fe3015 SHA1 a20e980972123e424fdef14001dace14ca1a6b73 SHA256 85d8894b7d163dacf7dfc94fff4e8c4a9cbb0302a66fc7e545a6d5c1c6c9318c
 EBUILD ufed-0.40-r10.ebuild 1292 RMD160 fc796b655c3c6050dd12f79e803e620f917d4309 SHA1 488dbdda2ee4f1b4753847a01be72a5107eeccec SHA256 72c4d23d6a731f70b60a7cccdacec7a9b9aefc4406b2145daafa470212e44590
-MISC ChangeLog 9816 RMD160 da2a312f4bd2e8ce866eb789ba0598f7f844423c SHA1 4f50dcd9fa2579470460dc9785f133a5db7ff5f8 SHA256 50c8c1389223e48a8e00f2776b4b029ef752e12b615a4f952fcfea8dbd102f94
+EBUILD ufed-0.40-r11.ebuild 1323 RMD160 3f7d1eeb72877456e989caf1ef9c3b40a9d9d76e SHA1 6010a69e5491cff5167ea8afdc0882c1b4cd1eab SHA256 b2ca19db7675d2ad7c9fc40f5f4f52872ac3b4210261a0fcc0b14126af7401ee
+MISC ChangeLog 10043 RMD160 94895cb67653aafef7b23c3db259b9de090625a7 SHA1 38c12e185f502ab08a284bcee7b47910537d9ece SHA256 4a6439ddb5acd37b64d350e88ea193444041028cd9f3c6f401f0b27fbfe7d24e
 MISC metadata.xml 256 RMD160 338deafc839d9e041e7c2df1ad9f3d73da67c096 SHA1 437b2fe5a9ddf258e30d77483bea041d998381de SHA256 52559b22087ad96b3cc63918a82c69515b3efdb8ca7735746698650bf62bb8b5
