@@ -1,6 +1,13 @@
 # ChangeLog for app-portage/ufed
-# Copyright 2003-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/ufed/ChangeLog,v 1.69 2008/08/08 16:55:54 nixnut Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-portage/ufed/ChangeLog,v 1.70 2009/06/18 17:16:19 truedfx Exp $
+
+*ufed-0.40-r11 (18 Jun 2009)
+
+  18 Jun 2009; Harald van Dĳk <truedfx@gentoo.org> +ufed-0.40-r11.ebuild,
+  +files/ufed-0.40-termsize-2.patch:
+  Support flags with too many descriptions to fit on one screen (#273309 by
+  ulm)
 
   08 Aug 2008; nixnut <nixnut@gentoo.org> ufed-0.40-r10.ebuild:
   Stable on ppc wrt bug 233644
